update : index.html db 데이터 출력

--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -20,9 +20,7 @@
             </li>
             </ul>
             <form class="d-flex">
-                <button class="btn btn-outline-dark" type="submit">
-                    Login
-                </button>
+                <a href="login" class="btn btn-outline-dark">Login</a>
             </form>
         </div>
     </div>
