--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -6,7 +6,7 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5">
-            <div th:each="WritingTbl : ${list}" th:if="${WritingTbl.titleNum le 21}" class="col-lg-8" >
+            <div th:each="WritingTbl : ${list}" class="col-lg-8" >
                 <div class="card mb-4">
                     <img class="card-img-top" th:src="@{/images/{imageName}(imageName=${WritingTbl.img})}" alt="Product Image" />
                     <div class="card-body">
@@ -18,10 +18,10 @@
         </div>
     </div>
 </section>
-<footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
-</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/bootstrap/js/scripts.js"></script>
 </body>
+<footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+</footer>
 </html>
