--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -7,7 +7,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="writing">글 작성</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="../writing">글 작성</a></li>
                 <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">게시판</a>
@@ -20,7 +20,7 @@
             </li>
             </ul>
             <form class="d-flex">
-                <a href="login" class="btn btn-outline-dark">Login</a>
+                <a href="../login" class="btn btn-outline-dark">Login</a>
             </form>
         </div>
     </div>
