add : BoardController, BoardService, BoardRepository, DTO

--- a/src/main/resources/templates/layout/nav.html
+++ b/src/main/resources/templates/layout/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-        <a href="/">
+        <a href="/static">
             <img src="/images/logo.png" alt="Logo">
         </a>
         <!--                <a class="navbar-brand" href="#!">Learning-mate</a>-->
