--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="head :: head"></div>
+<div th:replace="layout/head :: head"></div>
 <body>
-<div th:replace="nav :: nav"></div>
+<div th:replace="layout/nav :: nav"></div>
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
@@ -14,17 +14,19 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div th:each="WritingTbl : ${list}" th:if="${WritingTbl.titleNum le 21}" class="col mb-5"> <!--titlenum이 21인 값 까지 가져옴 임시로 해둠-->
+            <div th:each="list : ${board}" class="col mb-5"> <!--titlenum이 21인 값 까지 가져옴 임시로 해둠-->
                 <div class="card h-100">
-                    <img class="card-img-top img-fluid" th:src="@{/images/{imageName}(imageName=${WritingTbl.img})}" alt="Product Image" style="max-height: 250px; width: 100%; height: 100%; object-fit: cover;">
+<!--                    <img class="card-img-top img-fluid" th:src="@{/images/{imageName}(imageName=${WritingTbl.img})}" alt="Product Image" style="max-height: 250px; width: 100%; height: 100%; object-fit: cover;">-->
                     <div class="card-body p-4" style="max-height: 300px; overflow-y: auto;">
                         <div class="text-center">
-                            <h5 class="fw-bolder" th:text="${WritingTbl.title}">Product Name</h5>
-                            <div th:text="${WritingTbl.content}" style="white-space: pre-line;">Product Price</div>
+                            <h5 class="fw-bolder" th:text="${list.title}">Product Name</h5>
+                            <div th:text="${list.dueDate}" style="white-space: pre-line;">Product Price</div>
+                            <div th:text="${list.studySubject}" style="white-space: pre-line;">Product Price</div>
+                            <div th:text="${list.viewCount}" style="white-space: pre-line;">Product Price</div>
                         </div>
                     </div>
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" th:href="@{/detail/{titleNum}(titleNum=${WritingTbl.titleNum})}">알아보기</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto " th:href="">알아보기</a></div>
                     </div>
                 </div>
             </div>
