--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -1,27 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="head :: head"></div>
+<div th:replace="layout/head :: head"></div>
+<link rel="stylesheet" th:href="@{/bootstrap/css/style.css}" />
 <body>
-<div th:replace="nav :: nav"></div>
+<div th:replace="layout/nav :: nav"></div>
 <div class="container mt-5">
-    <h2 class="mb-4">게시글 작성</h2>
-    <form action="writing/writepro" method="post">
-        <div class="mb-3">
-            <label for="postTitle" class="form-label">제목</label>
-            <input type="text" class="form-control" id="postTitle" placeholder="Enter title" name="title">
+    <h2 class="mb-4" style="font-weight: bold">어떤 스터디를 하실건가요?</h2>
+    <form action="board/write/writePro" method="post">
+        <div class="form-row">
+            <div class="mb-3">
+                <label for="postTitle1" class="form-label">제목</label>
+                <input type="text" class="form-control" id="postTitle1" placeholder="Enter title" name="title">
+            </div>
+
+            <div class="mb-3">
+                <label for="postTitle2" class="form-label">스터디 과목</label>
+                <input type="text" class="form-control" id="postTitle2" placeholder="Enter title" name="title">
+            </div>        </div>
+
+        <div class="form-row">
+            <div class="mb-3">
+                <label for="postTitle6" class="form-label">모집 인원</label>
+                <input type="text" class="form-control" id="postTitle6" placeholder="Enter title" name="title">
+            </div>
+
+            <div class="mb-3">
+                <label for="postTitle3" class="form-label">진행 방식</label>
+                <input type="text" class="form-control" id="postTitle3" placeholder="Enter title" name="title">
+            </div>
         </div>
+
+        <div class="form-row">
+            <div class="mb-3">
+                <label for="postTitle4" class="form-label">모집 마감일</label>
+                <input type="text" class="form-control" id="postTitle4" placeholder="Enter title" name="title">
+            </div>
+
+            <div class="mb-3">
+                <label for="postTitle5" class="form-label">오픈채팅 링크</label>
+                <input type="text" class="form-control" id="postTitle5" placeholder="Enter title" name="title">
+            </div>
+        </div>
+
         <div class="mb-3">
-            <label for="postContent" class="form-label">내용</label>
+            <label for="postContent" class="form-label">스터디에 대해 소개해주세요!</label>
             <textarea class="form-control" id="postContent" rows="6" placeholder="Enter your content" name="content"></textarea>
         </div>
-        <div class="mb-3">
-            <label for="postTitle" class="form-label">이미지</label>
-            <input type="text" class="form-control" id="postImg" placeholder="Enter title" name="img">
-        </div>
-        <button type="submit" class="btn btn-outline-dark">작성</button>
+        <div class="text-end">
+            <button type="submit" class="btn btn-outline-dark">작성</button>
+        </div><br><br>
     </form>
 </div>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
+<footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+</footer>
 <link href="/bootstrap/js/scripts.js" rel="stylesheet" />
 </body>
 </html>
