--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,26 +4,79 @@
 <body>
 <div th:replace="layout/nav :: nav"></div>
 <header class="bg-dark py-5">
-    <div class="container px-4 px-lg-5 my-5">
-        <div class="text-center text-white">
-            @@ -14,17 +14,19 @@ <h1 class="display-4 fw-bolder">Shop in style</h1>
+    <div class="container px-1 px-lg-5 my-5">
+        <div style="text-align: left; font-weight: bold; color:white">
+            <h1 class="display-4 fw-bolder">스터디를 찾는 가장 쉬운 방법</h1><br>
+            <h3>러닝메이트와 함께 하세요!</h3><br>
+        </div>
+    </div>
+</header>
             <section class="py-5">
                 <div class="container px-4 px-lg-5 mt-5">
+                    <h3 style="text-align: left; font-weight: bold">인기글🔥</h3><br>
+                    <!-- 상위 4개 인기글 표시 -->
                     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                        <div th:each="list : ${board}" class="col mb-5"> <!--titlenum이 21인 값 까지 가져옴 임시로 해둠-->
+                        <div th:each="list, stat : ${topBoard}" class="col mb-5">
                             <div class="card h-100">
-                                <!--                    <img class="card-img-top img-fluid" th:src="@{/images/{imageName}(imageName=${WritingTbl.img})}" alt="Product Image" style="max-height: 250px; width: 100%; height: 100%; object-fit: cover;">-->
+                                <a style="text-decoration: none;" th:href="@{/board/detail/{id}(id=${list.boardNo})}">
                                 <div class="card-body p-4" style="max-height: 300px; overflow-y: auto;">
                                     <div class="text-center">
-                                        <h5 class="fw-bolder" th:text="${list.title}">Product Name</h5>
-                                        <div th:text="${list.dueDate}" style="white-space: pre-line;">Product Price</div>
-                                        <div th:text="${list.studySubject}" style="white-space: pre-line;">Product Price</div>
-                                        <div th:text="${list.viewCount}" style="white-space: pre-line;">Product Price</div>
+                                        <h5 class="fw-bolder" th:text="${list.title}" style="color:black">Product Name</h5>
+                                        <div th:text="${list.dueDate}" style="white-space: pre-line; color:black">Product Price</div>
+                                        <div th:text="${list.studySubject}" style="white-space: pre-line; color:black">Product Price</div><br>
+                                        <hr style="border-top: 1px solid dimgrey; margin-top: 10px; margin-bottom: 10px;">
+                                        <div style="display: flex; align-items: center; justify-content: flex-end; color:black;">
+                                            <img src="/image/조회수.png" alt="조회수" style="width: 20px; height: 20px; ">
+                                            <span th:text="${list.viewCount}"></span>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto " th:href="">알아보기</a></div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <h3 style="text-align: left; font-weight: bold">전체 게시글</h3>
+                    <ul class="nav">
+                        <li class="nav-item dropdown" style="display: inline-block; margin-right: 10px;">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                               style="color:black; font-weight: bold; font-size: 1.1em; border: 2px solid white; border-radius: 20px;"
+                               onmouseover="this.style.color='gray'"
+                               onmouseout="this.style.color='black'">스터디 과목</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                <li><a class="dropdown-item" href="#!">자유 게시판</a></li>
+                                <li><a class="dropdown-item" href="#!">HOT 게시글</a></li>
+                                <li><a class="dropdown-item" href="#!">취업·진로 게시판</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown" style="display: inline-block; margin-right: 10px;">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                               style="color:black; font-weight: bold; font-size: 1.1em; border: 2px solid white; border-radius: 20px;"
+                               onmouseover="this.style.color='gray'"
+                               onmouseout="this.style.color='black'">진행 방식</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                                <li><a class="dropdown-item" href="#!">온라인</a></li>
+                                <li><a class="dropdown-item" href="#!">오프라인</a></li>
+                                <li><a class="dropdown-item" href="#!">온/오프라인</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                        <div th:each="list : ${allBoard}" class="col mb-5">
+                            <div class="card h-100">
+                                <a style="text-decoration: none;" th:href="@{/board/detail/{id}(id=${list.boardNo})}">
+                                <div class="card-body p-4" style="max-height: 300px; overflow-y: auto;">
+                                    <div class="text-center">
+                                        <h5 class="fw-bolder" th:text="${list.title}" style="color:black">Product Name</h5>
+                                        <div th:text="${list.dueDate}" style="white-space: pre-line; color:black">Product Price</div>
+                                        <div th:text="${list.studySubject}" style="white-space: pre-line; color:black">Product Price</div>
+                                        <hr style="border-top: 1px solid dimgrey; margin-top: 10px; margin-bottom: 10px;">
+                                        <div style="display: flex; align-items: center; justify-content: flex-end; color:black;">
+                                            <img src="/image/조회수.png" alt="조회수" style="width: 20px; height: 20px; ">
+                                            <span th:text="${list.viewCount}"></span>
+                                        </div>
+                                    </div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -32,7 +85,8 @@
             <footer class="py-5 bg-dark">
                 <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
             </footer>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
             <script src="/bootstrap/js/scripts.js"></script>
+        </div>
+    </div>
 </body>
 </html>
