--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="layout/head :: head"></div>
+<title>Learning_Mate</title>
+<link rel="stylesheet" th:href="@{/bootstrap/css/style.css}" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <body>
 <div th:replace="layout/nav :: nav"></div>
 <header class="bg-dark py-5">
@@ -37,9 +40,9 @@
                     </div>
                     <h3 style="text-align: left; font-weight: bold">전체 게시글</h3>
                     <ul class="nav">
-                        <li class="nav-item dropdown" style="display: inline-block; margin-right: 10px;">
+                        <li class="nav-item dropdown" style="display: inline-block; margin-right: 5px;">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                               style="color:black; font-weight: bold; font-size: 1.1em; border: 2px solid white; border-radius: 20px;"
+                               style="color:black; font-weight: bold; font-size: 0.9em; border: 1px solid gray; border-radius: 20px; padding: 5px 10px;"
                                onmouseover="this.style.color='gray'"
                                onmouseout="this.style.color='black'">스터디 과목</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
@@ -48,9 +51,9 @@
                                 <li><a class="dropdown-item" href="#!">취업·진로 게시판</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item dropdown" style="display: inline-block; margin-right: 10px;">
+                        <li class="nav-item dropdown" style="display: inline-block; margin-right: 5px;">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                               style="color:black; font-weight: bold; font-size: 1.1em; border: 2px solid white; border-radius: 20px;"
+                               style="color:black; font-weight: bold; font-size: 0.9em; border: 1px solid gray; border-radius: 20px; padding: 5px 10px;"
                                onmouseover="this.style.color='gray'"
                                onmouseout="this.style.color='black'">진행 방식</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
@@ -59,7 +62,7 @@
                                 <li><a class="dropdown-item" href="#!">온/오프라인</a></li>
                             </ul>
                         </li>
-                    </ul>
+                    </ul><br>
                     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                         <div th:each="list : ${allBoard}" class="col mb-5">
                             <div class="card h-100">
@@ -88,5 +91,6 @@
             <script src="/bootstrap/js/scripts.js"></script>
         </div>
     </div>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
