--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -5,7 +5,7 @@
 <body>
 <div th:replace="layout/nav :: nav"></div>
 <div class="container mt-5">
-    <h2 class="mb-4" style="font-weight: bold">어떤 스터디를 하실건가요?</h2>
+    <h2 class="mb-4" style="font-weight: bold">어떤 스터디를 하실 건가요?</h2>
     <form action="/write/writePro" method="post">
         <div class="form-row">
             <div class="mb-3">
@@ -14,45 +14,51 @@
             </div>
 
             <div class="mb-3">
-                <label for="postTitle2" class="form-label">스터디 과목</label>
-                <input type="text" class="form-control" id="postTitle2" placeholder="Enter title" name="title">
-            </div>        </div>
-
-        <div class="form-row">
-            <div class="mb-3">
-                <label for="postTitle6" class="form-label">모집 인원</label>
-                <input type="text" class="form-control" id="postTitle6" placeholder="Enter title" name="title">
-            </div>
-
-            <div class="mb-3">
-                <label for="postTitle3" class="form-label">진행 방식</label>
-                <input type="text" class="form-control" id="postTitle3" placeholder="Enter title" name="title">
+                <label for="studySubject" class="form-label">스터디 과목</label>
+                <input type="text" class="form-control" id="studySubject" placeholder="Enter subject" name="studySubject">
             </div>
         </div>
 
         <div class="form-row">
             <div class="mb-3">
-                <label for="postTitle4" class="form-label">모집 마감일</label>
-                <input type="text" class="form-control" id="postTitle4" placeholder="Enter title" name="title">
+                <label for="totalPeople" class="form-label">모집 인원</label>
+                <input type="number" class="form-control" id="totalPeople" placeholder="Enter number" name="totalPeople" min="1">
             </div>
 
             <div class="mb-3">
-                <label for="postTitle5" class="form-label">오픈채팅 링크</label>
-                <input type="text" class="form-control" id="postTitle5" placeholder="Enter title" name="title">
+                <label for="studyType" class="form-label">진행 방식</label>
+                <select class="form-control" id="studyType" name="studyType">
+                    <option value="ONLINE">온라인</option>
+                    <option value="OFFLINE">오프라인</option>
+                    <option value="BOTH">온/오프라인</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="form-row">
+            <div class="mb-3">
+                <label for="dueDate" class="form-label">모집 마감일</label>
+                <input type="date" class="form-control" id="dueDate" name="dueDate">
+            </div>
+
+            <div class="mb-3">
+                <label for="contactLink" class="form-label">오픈채팅 링크</label>
+                <input type="text" class="form-control" id="contactLink" placeholder="Enter link" name="contactLink">
             </div>
         </div>
 
         <div class="mb-3">
             <label for="postContent" class="form-label">스터디에 대해 소개해주세요!</label>
-            <textarea class="form-control" id="postContent" rows="6" placeholder="Enter your content" name="title"></textarea>
+            <textarea class="form-control" id="postContent" rows="6" placeholder="Enter your content" name="content"></textarea>
         </div>
         <div class="text-end">
             <button type="submit" class="btn btn-outline-dark">작성</button>
         </div><br><br>
     </form>
+
 </div>
 <footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Learning_Mate 2024</p></div>
 </footer>
 <link href="/bootstrap/js/scripts.js" rel="stylesheet" />
 </body>
