--- a/src/main/resources/templates/layout/head.html
+++ b/src/main/resources/templates/layout/head.html
@@ -8,6 +8,8 @@
     <link rel="icon" type="image/x-icon" href="/bootstrap/assets/favicon.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet" />
+    <!-- Font Awesome CDN 추가 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         img {
             max-width: 85px;
