--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,9 +50,9 @@
                     style="width: 130px; padding-right: 30px; font-size: 14px; font-weight: bold; -webkit-appearance: none; -moz-appearance: none; appearance: none; cursor: pointer; border-radius: 20px; border: 2px solid black; padding: 0.375rem 0.75rem;"
                     onmouseover="this.style.color='gray'" onmouseout="this.style.color='black'">
                 <option value="" disabled selected>진행 방식</option>
-                <option value="ONLINE">전체</option>
-                <option value="ONLINE">온라인</option>
-                <option value="OFFLINE">오프라인</option>
+                <option value="ALL">전체</option>
+                <option value="ON">온라인</option>
+                <option value="OFF">오프라인</option>
                 <option value="BOTH">온/오프라인</option>
             </select>
             <i class="bi bi-chevron-down"
