--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Learning Mate</title>
+    <title>Signup - Learning Mate</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -14,7 +14,7 @@
             align-items: center;
             justify-content: center;
         }
-        .login-container {
+        .signup-container {
             background: #fff;
             padding: 30px;
             border-radius: 10px;
@@ -22,7 +22,7 @@
             width: 100%;
             max-width: 400px;
         }
-        .login-form button[type="submit"] {
+        .signup-form button[type="submit"] {
             background-color: dimgrey;
             border: none;
             padding: 10px;
@@ -31,10 +31,10 @@
             cursor: pointer;
             width: 100%;
         }
-        .login-form button[type="submit"]:hover {
+        .signup-form button[type="submit"]:hover {
             background-color: #3e00c7;
         }
-        .login-form input[type="email"], .login-form input[type="password"] {
+        .signup-form input[type="email"], .signup-form input[type="password"], .signup-form input[type="text"] {
             border: 1px solid #ddd;
             margin-bottom: 20px;
             padding: 10px;
@@ -44,15 +44,17 @@
     </style>
 </head>
 <body>
-<div class="login-container">
-    <h2 class="text-center mb-4">로그인</h2>
-    <form class="login-form" action="/login" method="post">
-        <input type="email" name="email" placeholder="이메일" required autofocus>
+<div class="signup-container">
+    <h2 class="text-center mb-4">회원가입</h2>
+    <form class="signup-form" action="/register" method="post">
+        <input type="text" name="name" placeholder="이름" required autofocus>
+        <input type="email" name="email" placeholder="이메일" required>
         <input type="password" name="password" placeholder="비밀번호" required>
-        <button type="submit">로그인</button>
+        <input type="password" name="confirmPassword" placeholder="비밀번호 확인" required>
+        <button type="submit">회원가입</button>
     </form>
     <div class="text-center mt-2">
-        <p>계정이 없으신가요? <a href="/join" style="color: #4a00e0; text-decoration: none;">회원가입</a></p>
+        <p>이미 계정이 있으신가요? <a href="/login" style="color: #4a00e0; text-decoration: none;">로그인</a></p>
     </div>
 </div>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
