update: user login fail msg 추가

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -38,7 +38,7 @@
         }
         .error {
             color: red;
-            font-size: 12px; /* 이 값을 조절하여 원하는 폰트 크기로 설정할 수 있습니다. */
+            font-size: 12px;
         }
     </style>
 <body>
