--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -50,7 +50,7 @@
         <input type="password" placeholder="비밀번호" th:field="*{password}" required autofocus>
         <input type="text" placeholder="이름" th:field="*{userName}" required autofocus>
         <input type="email" placeholder="이메일" th:field="*{userEmail}" required autofocus>
-        <input type="text" placeholder="전화번호" th:field="*{userPhone}" required autofocus>
+        <input type="text" id="userPhone" placeholder="전화번호" th:field="*{userPhone}" required autofocus>
         <button type="submit">회원가입</button>
     </form>
     <div class="text-center mt-2">
@@ -59,4 +59,19 @@
 </div>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
+<script>
+    document.getElementById('userPhone').addEventListener('input', function (e) {
+        var input = e.target.value.replace(/\D/g, ''); // 숫자가 아닌 모든 문자를 제거
+        var size = input.length;
+
+        if (size > 3 && size <= 7) {
+            input = input.slice(0, 3) + '-' + input.slice(3);
+        } else if (size > 7) {
+            input = input.slice(0, 3) + '-' + input.slice(3, 7) + '-' + input.slice(7, 11);
+        }
+
+        e.target.value = input;
+    });
+</script>
+
 </html>
