--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -5,7 +5,7 @@
 <div th:replace="layout/nav :: nav"></div>
 <div class="container mt-5">
     <h2 class="mb-4" style="font-weight: bold">어떤 스터디를 하실 건가요?</h2>
-    <form th:action="@{/board/write}"  th:object="${request}" method="post">
+    <form th:action="@{/board/write}"  th:object="${boardRequest}" method="post">
         <div class="form-row">
             <div class="mb-3">
                 <label for="postTitle1" class="form-label">제목</label>
