--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -3,17 +3,27 @@
 <head>
     <div th:replace="layout/head :: head"></div>
     <style>
-        footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            text-align: center;
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .content-wrap {
+            flex: 1;
+        }
+
+        footer{
+            margin-bottom: 0px;
         }
     </style>
 </head>
 <body>
-<div th:replace="layout/nav :: nav"></div>
+<div class="content-wrap" th:replace="layout/nav :: nav"></div>
 <section class="py-5">
     <div class="container">
         <div class="row">
@@ -26,12 +36,12 @@
                         <p class="card-text"><strong>이름:</strong> <span th:text="${list.userName}">사용자 이름</span></p>
                         <p class="card-text"><strong>이메일:</strong> <span th:text="${list.userEmail}">user@example.com</span></p>
                         <p class="card-text"><strong>전화번호:</strong> <span th:text="${list.userPhone}">000-0000-0000</span></p>
-                        <a href="#" class="btn btn-primary">프로필 편집</a>
+                        <a href="#" class="btn btn-outline-dark">프로필 편집</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-8">
-                <h2>참여중인 스터디 그룹</h2>
+                <h2>작성 글</h2>
                 <div class="list-group">
                     <a href="#" class="list-group-item list-group-item-action" aria-current="true">
                         <div class="d-flex w-100 justify-content-between">
@@ -40,17 +50,28 @@
                         </div>
                         <p class="mb-1">간단한 설명이나 주요 정보</p>
                         <small>더 자세한 정보...</small>
+                        <a href="#" class="btn btn-outline-dark">수정</a><a href="#" class="btn btn-outline-dark">삭제</a>
                     </a>
-                </div>
+                </div><br><br>
+                <h2>찜 스터디</h2>
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">그룹 이름</h5>
+                            <small>마감일: YYYY-MM-DD</small>
+                        </div>
+                        <p class="mb-1">간단한 설명이나 주요 정보</p>
+                        <small>더 자세한 정보...</small>
+                        <a href="#" class="btn btn-outline-dark">삭제</a>
+                    </a>
+                </div><br>
             </div>
         </div>
     </div>
 </section>
-
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+</body>
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Learning_Mate 2024</p></div>
 </footer>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-</body>
 </html>
